[project]
name = "diffstrings"
version = "0.0.4"
authors = [
  { name="Uguudei"}
]
description = "Show difference of two strings in color"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/uguudei/diffstrings"
"Bug Tracker" = "https://github.com/uguudei/diffstrings/issues"
"Source Code" = "https://github.com/uguudei/diffstrings"

[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"